# Term_Assist

./: README.md  pyproject.toml  start_ta_daemon.sh  term_assist_zsh.sh
src/term_assist/: __init__.py  client.py  command_analyzer.py  constants.py  file_error_handler.py  llm.py  prompts.py  response_enhancer.py  server.py  spinner.py
src/term_assist/tree_sitter/python/: tree_sitter_python.py
