[project]
name = "term-assist"
version = "0.1.0"
description = ""
authors = [
    {name = "Yashraj67",email = "www.yindustries@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "term_assist", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
