[project]
name = "term-assist"
version = "0.1.0"
description = ""
authors = [
    {name = "Yashraj67",email = "www.yindustries@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter (>=0.24.0,<0.25.0)",
    "tree-sitter-python (>=0.23.6,<0.24.0)",
    "tree-sitter-language-pack (>=0.7.1,<0.8.0)",
    "intervaltree (>=3.1.0,<4.0.0)",
    "openai (>=1.73.0,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[tool.poetry]
packages = [{include = "term_assist", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
